--- a/web/index.html
+++ b/web/index.html
@@ -28,11 +28,13 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDa_pdx3MLRSrSz0p1OLz0CSMUCHPa-0RA"></script>
 
   <title>book</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+ 
 </body>
 </html>
